--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
     <div id="produtos-container"></div>
   </main>
 
+
+  <div class="login-modal">
+    <div id="conteudo">
+      <img src="./img/LOGO3.jpg" class="avatar">
+      <h1>Logar aqui</h1>
+       <form>
+          <p>Usuário</p>
+          <input type="text" name="usuario" placeholder="Entre com o Usuário">
+          <p>Senha</p>
+          <input type="password" name="senha" placeholder="Entre com o senha">
+          <button type="submit">Login</button>
+          <a href="#">Esqueci a senha</a>
+       </form>
+  </div>
+  <img src="img/x.svg" alt="" class="close-menu">
+  </div>
+
+  
   <footer>
     <ul class="social-icons">
       <li><a href="https://biolink.website/malefit"><i class="fab fa-whatsapp"></i></a></li>
@@ -63,6 +81,9 @@
   <script src="./views/Cart/scripts/produt.js"></script>
   <script src="./views/Cart/scripts/carrinho.js"></script>
   <script src="./views/Cart/scripts/login.js"></script>
+
+
+  
 </body>
 
 </html>
